--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -124,7 +124,9 @@
     <Compile Include="TextToolbar\Formats\Formatter.cs" />
     <Compile Include="TextToolbar\Formats\MarkDownFormatter.cs" />
     <Compile Include="TextToolbar\Formats\RichTextFormatter.cs" />
+    <Compile Include="TextToolbar\ShortcutKeyRequestArgs.cs" />
     <Compile Include="TextToolbar\TextToolbar.cs" />
+    <Compile Include="TextToolbar\TextToolbar.Methods.cs" />
     <Compile Include="TextToolbar\TextToolbar.Events.cs" />
     <Compile Include="TextToolbar\TextToolbar.Labels.cs" />
     <Compile Include="TextToolbar\TextToolbar.Properties.cs" />
