-Shunk default Template for ToolbarButton, added support for Toggling.
-TextToolbar now properly updates the XAML Designer, as the Dependency property are handled with PropertyChanged Events. (If Project code is disabled, nothing shows).

-Added ToolbarButton as a parameter to every Formatter method, in order to do things such as enabling Toggling, and to handle the ToggleEnded Event.

-Added Headers menu for MarkDown Formatter, to create different Headers.

-Added Inline Check for Code Formatting.

-All MD SetList methods are now Toggleable, so that they automatically add the List Char after going to a new line.

-Removed Dependency on FontAwesome, by Designing List Icons using XAML.

-Fixed Sample Page, Fleshed out Page, and added Binded Properties, so that users can see both the Markdown Formatter and RichText Formatter, and what it would look like in the dark theme.

-Sample Page also demonstrates Adding/Removing Default Buttons, Custom Buttons with Keyboard shortcuts.

-Added some basic implementation or RichText Formatting.

--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -408,6 +408,7 @@
       <DependentUpon>FocusTrackerPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SamplePages\BackgroundTaskHelper\TestBackgroundTask.cs" />
+    <Compile Include="SamplePages\TextToolbar\IsFormat.cs" />
     <Compile Include="SamplePages\TextToolbar\TextToolbarPage.xaml.cs">
       <DependentUpon>TextToolbarPage.xaml</DependentUpon>
     </Compile>
