--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -125,6 +125,8 @@
     <Compile Include="TextToolbar\Formats\MarkDownFormatter.cs" />
     <Compile Include="TextToolbar\Formats\RichTextFormatter.cs" />
     <Compile Include="TextToolbar\ShortcutKeyRequestArgs.cs" />
+    <Compile Include="TextToolbar\Symbols\List.cs" />
+    <Compile Include="TextToolbar\Symbols\NumberedList.cs" />
     <Compile Include="TextToolbar\TextToolbar.cs" />
     <Compile Include="TextToolbar\TextToolbar.Methods.cs" />
     <Compile Include="TextToolbar\TextToolbar.Events.cs" />
@@ -142,7 +144,6 @@
     <Compile Include="WrapPanel\WrapPanel.Data.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
     <None Include="project.json" />
-    <Content Include="TextToolbar\Font\FontAwesome.otf" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ControlHelpers.Composition.cs" />
@@ -215,6 +216,10 @@
     <Page Include="MarkdownTextBlock\MarkdownTextBlock.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TextToolbar\Symbols\Symbols.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TextToolbar\TextToolbar.xaml">
       <Generator>MSBuild:Compile</Generator>
