-Moved Labels to TextToolbarStrings class, allowing for a mass transit of translatable/replacable strings.
-Fixed Formatter not loading Default Buttons into the TextToolbar Default Buttons map. Meaning that Default buttons can now be manually be modified before the UI appears.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -130,7 +130,7 @@
     <Compile Include="TextToolbar\TextToolbar.cs" />
     <Compile Include="TextToolbar\TextToolbar.Methods.cs" />
     <Compile Include="TextToolbar\TextToolbar.Events.cs" />
-    <Compile Include="TextToolbar\TextToolbar.Labels.cs" />
+    <Compile Include="TextToolbar\TextToolbarStrings.cs" />
     <Compile Include="TextToolbar\TextToolbar.Properties.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ButtonMap.cs" />
     <Compile Include="TextToolbar\ToolbarItems\CommonButtons.cs" />
