-Custom TextToolbar Symbols now react to IsEnabled with a Gray ViewState.
-Added Back IsEnabled Property to Sample Page.

-Added DependencyPropertyWatcher, to track changes in Dependency Properties.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -127,6 +127,7 @@
     <Compile Include="TextToolbar\ShortcutKeyRequestArgs.cs" />
     <Compile Include="TextToolbar\Symbols\List.cs" />
     <Compile Include="TextToolbar\Symbols\NumberedList.cs" />
+    <Compile Include="TextToolbar\Symbols\Symbol.cs" />
     <Compile Include="TextToolbar\TextToolbar.cs" />
     <Compile Include="TextToolbar\TextToolbar.Methods.cs" />
     <Compile Include="TextToolbar\TextToolbar.Events.cs" />
