-Created a Subclass of ObservableCollection<DefaultButton>, as the XAML Designer seems to complain if using it to remove Default Buttons in XAML. XAML designer errors should no longer occur for Removing Buttons.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -138,6 +138,7 @@
     <Compile Include="TextToolbar\ToolbarItems\CommonButtons.Events.cs" />
     <Compile Include="TextToolbar\ToolbarItems\DefaultButton.cs" />
     <Compile Include="TextToolbar\ToolbarItems\IToolbarItem.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\RemovalList.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ToolbarButton.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ToolbarSeparator.cs" />
     <Compile Include="TileControl\TileControl.cs" />
