Retrieve calendar events with Microsoft Graph service.

--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Services\LinkedIn\LinkedInShareRequest.cs" />
     <Compile Include="Services\LinkedIn\LinkedInVisibility.cs" />
     <Compile Include="Services\MicrosoftGraph\JWToken.cs" />
+    <Compile Include="Services\MicrosoftGraph\Events\MicrosoftGraphEventFields.cs" />
+    <Compile Include="Services\MicrosoftGraph\Events\MicrosoftGraphServiceEvent.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphAuthenticationHelper.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphEnums.cs" />
     <Compile Include="Services\MicrosoftGraph\MicrosoftGraphHelper.cs" />
