Remove ExpressionBuilder. prefix from file name

--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -72,38 +72,38 @@
     <Compile Include="Effects\Blur.cs" />
     <Compile Include="Effects\Saturation.cs" />
     <Compile Include="Effects\AnimationEffect.cs" />
-    <Compile Include="Expressions\ExpressionBuilder.CompositionExtensions.cs" />
-    <Compile Include="Expressions\ExpressionBuilder.ExpressionFunctions.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.BooleanNode.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.ColorNode.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.ExpressionNode.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.Matrix3x2Node.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.Matrix4x4Node.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.QuaternionNode.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.ScalarNode.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.Vector2Node.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.Vector3Node.cs" />
-    <Compile Include="Expressions\ExpressionNodes\ExpressionBuilder.Vector4Node.cs" />
-    <Compile Include="Expressions\ExpressionValues\ExpressionBuilder.ExpressionValues.Constant.cs" />
-    <Compile Include="Expressions\ExpressionValues\ExpressionBuilder.ExpressionValues.CurrentValue.cs" />
-    <Compile Include="Expressions\ExpressionValues\ExpressionBuilder.ExpressionValues.Reference.cs" />
-    <Compile Include="Expressions\ExpressionValues\ExpressionBuilder.ExpressionValues.StartingValue.cs" />
-    <Compile Include="Expressions\ExpressionValues\ExpressionBuilder.ExpressionValues.Target.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.AmbientLightReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.ColorBrushReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.DistantLightReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.DropShadowReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.InsetClipReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.InteractionTrackerReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.ManipulationPropertySetReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.NineGridBrushReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.PointerPositionPropertySet.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.PointLightReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.PropertySetReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.ReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.SpotLightReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.SurfaceBrushReferenceNode.cs" />
-    <Compile Include="Expressions\ReferenceNodes\ExpressionBuilder.VisualReferenceNode.cs" />
+    <Compile Include="Expressions\CompositionExtensions.cs" />
+    <Compile Include="Expressions\ExpressionFunctions.cs" />
+    <Compile Include="Expressions\ExpressionNodes\BooleanNode.cs" />
+    <Compile Include="Expressions\ExpressionNodes\ColorNode.cs" />
+    <Compile Include="Expressions\ExpressionNodes\ExpressionNode.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Matrix3x2Node.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Matrix4x4Node.cs" />
+    <Compile Include="Expressions\ExpressionNodes\QuaternionNode.cs" />
+    <Compile Include="Expressions\ExpressionNodes\ScalarNode.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Vector2Node.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Vector3Node.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Vector4Node.cs" />
+    <Compile Include="Expressions\ExpressionValues\ExpressionValues.Constant.cs" />
+    <Compile Include="Expressions\ExpressionValues\ExpressionValues.CurrentValue.cs" />
+    <Compile Include="Expressions\ExpressionValues\ExpressionValues.Reference.cs" />
+    <Compile Include="Expressions\ExpressionValues\ExpressionValues.StartingValue.cs" />
+    <Compile Include="Expressions\ExpressionValues\ExpressionValues.Target.cs" />
+    <Compile Include="Expressions\ReferenceNodes\AmbientLightReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\ColorBrushReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\DistantLightReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\DropShadowReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\InsetClipReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\InteractionTrackerReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\ManipulationPropertySetReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\NineGridBrushReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\PointerPositionPropertySet.cs" />
+    <Compile Include="Expressions\ReferenceNodes\PointLightReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\PropertySetReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\ReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\SpotLightReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\SurfaceBrushReferenceNode.cs" />
+    <Compile Include="Expressions\ReferenceNodes\VisualReferenceNode.cs" />
     <Compile Include="Extensions\AnimationExtensions.Blur.cs" />
     <Compile Include="Extensions\AnimationExtensions.cs" />
     <Compile Include="Extensions\AnimationExtensions.Fade.cs" />
