--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Expressions\ExpressionNodes\ExpressionNodeType.cs" />
     <Compile Include="Expressions\ExpressionNodes\Matrix3x2Node.cs" />
     <Compile Include="Expressions\ExpressionNodes\Matrix4x4Node.cs" />
+    <Compile Include="Expressions\ExpressionNodes\Matrix4x4Node.Subchannel.cs" />
     <Compile Include="Expressions\ExpressionNodes\QuaternionNode.cs" />
     <Compile Include="Expressions\ExpressionNodes\ScalarNode.cs" />
     <Compile Include="Expressions\ExpressionNodes\ValueKeywordKind.cs" />
