feat(helpers): add screen unit helper

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Helpers\Test_ClipboardHelper.cs" />
     <Compile Include="Helpers\Test_ColorHelper.cs" />
     <Compile Include="Helpers\Test_ConnectionHelper.cs" />
+    <Compile Include="Helpers\Test_ScreenUnitHelper.cs" />
     <Compile Include="Helpers\Test_StorageFileHelper.cs" />
     <Compile Include="Helpers\Test_HttpHelper.cs" />
     <Compile Include="Helpers\Test_StreamHelper.cs" />
